--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -43,7 +43,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|end"
                 android:layout_margin="10dp"
-                android:text="çevrimiçi" />
+                android:text="çevrimiçi"
+                android:textColor="@color/green"
+                />
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
