--- a/app/src/main/res/drawable/from_chat_bubble.xml
+++ b/app/src/main/res/drawable/from_chat_bubble.xml
@@ -8,7 +8,7 @@
             android:pivotY="0%"
             android:toDegrees="0">
             <shape android:shape="rectangle">
-                <solid android:color="@color/green_lightest" />
+                <solid android:color="#FBC4F4" />
                 <corners android:radius="4dp"
                     />
 
@@ -20,7 +20,7 @@
 
     <item android:right="10dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/green_lightest" />
+            <solid android:color="#FBC4F4" />
             <corners android:radius="10dp" />
         </shape>
 
