--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#075E54</color>
-    <color name="purple_700">#FC075E54</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="purple_500">#ac1c99</color>
+    <color name="purple_700">#ac1c99</color>
+    <color name="teal_200">#ffa2f3</color>
+    <color name="teal_700">#fc1d81</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
@@ -20,17 +20,17 @@
 
 
     <color name="tab_inactive">@color/green_light</color>
-    <color name="tab_color">#075E54</color>
-    <color name="statusbar_color">#128C7E</color>
+    <color name="tab_color">#ac1c99</color>
+    <color name="statusbar_color">#ff25e2</color>
 
 
     <!-- Palette Greens -->
     <color name="green_lightest">#e2ffc7</color>
-    <color name="green_light">#7eb0ad</color>
-    <color name="green">#16cc3e</color>
-    <color name="green_dark">#19887a</color>
-    <color name="green_darker">#0e5e55</color>
-    <color name="green_darkest">#00574B</color>
+    <color name="green_light">#ffa2f3</color>
+    <color name="green">#ff25e2</color>
+    <color name="green_dark">#fc1d81</color>
+    <color name="green_darker">#ac1c99</color>
+    <color name="green_darkest">#ac1c99</color>
 
     <!-- White & Gray -->
 
